fix: resolve all IDE warnings
- ZugzwangStrategy: remove unused myDist/oppDist variables
- TournamentSummary: rename `record` (restricted identifier) → `scoreText`;
  split `chipBg, chipFg` onto separate lines
- TournamentView: extract CSS string literals to constants; add braces to
  if bodies (S2681); remove redundant (long) casts; separate s2 declaration;
  use Math.clamp; extract estimateTotalWorkMs() to reduce cognitive complexity
- PathCountStrategy: extract bfsFrom() and countDagCells() helpers to reduce
  pathDagWidth cognitive complexity from 36 to within limit

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>